--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,14 +3,14 @@ project:
   output-dir: docs
 
 website:
-  title: "."
+  title: "Colby's Blog"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/ColbySP
+      - icon: linkedin
+        href: https://www.linkedin.com/in/colbysp/
 format:
   html:
     theme: cosmo
