--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
         href: https://www.linkedin.com/in/colbysp/
   back-to-top-navigation: true
   google-analytics:
-    tracking-id: 6109903216
+    tracking-id: "G-8VGP46KHDR"
     storage: none
 
 format:
